--- a/package.json
+++ b/package.json
@@ -3,5 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "luizh.nnh@gmail.com <Luiz Nascimento>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "typescript": "^4.1.5"
+  }
 }
