--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "main": "index.js",
   "author": "luizh.nnh@gmail.com <Luiz Nascimento>",
   "license": "MIT",
+  "scripts": {
+    "dev:server": "nodemon --config \"./nodemon.json\"/"
+  },
   "dependencies": {
+    "@overnightjs/core": "^1.7.5",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
 }
