--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@overnightjs/core": "^1.7.5",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -19,7 +20,9 @@
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
