chore: adicionado dockek

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APPLICATION_NAME=BACKEND_LYNCAS
 
 # DATABASE CONFIGURATIONS
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+DATABASE_HOST=postgres-lyncas
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres-lyncas
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=lyncasQuestions
