--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "luizh.nnh@gmail.com <Luiz Nascimento>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "nodemon --config \"./nodemon.json\"/"
+    "dev:server": "nodemon --config \"./nodemon.json\"/",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
