--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
   "author": "luizh.nnh@gmail.com <Luiz Nascimento>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "nodemon --config \"./nodemon.json\"/",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
+    "awilix": "^4.3.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.5.1",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
@@ -25,6 +35,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.5"
   }
 }
