feat: adicionado o modulo de status

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 APPLICATION_NAME=BACKEND_LYNCAS
 
 # DATABASE CONFIGURATIONS
-DATABASE_HOST=postgres-lyncas
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres-lyncas
 DATABASE_PASSWORD=postgres
